made basic layout and styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
 </head>
 <body>
 
-    <h1>The Odin Project</h1>
     
+
+     
+    <div id="content">
+        <div id="imgDiv">
+             <img src="background.jpg"  id="pic"> 
+             <div id="logoContainer">
+                <img src="odin-lined.png" id="odinPic" width="125px">
+                <h1>The Odin Project</h1>
+            </div>
+        </div>
+
+        <div id="leftContent">
+            <h2>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  </h2>
+
+            <div id="formContent">
+                <p>Sign up!</p>
+            </div>
+
+            <div id="bottomContent">
+            <button type="submit">Create Account</button>
+            <p>Already have an account? <span>Log in</span></p>
+            </div>
+        </div>       
+    </div>
 </body>
 </html>
